tests/whiley/invalid/test_54.wyal
type char is (int x)
where:
    (x >= 0) && (x <= 255)


assert "type invariant not satisfied":
    if:
        true
    then:
        [-1] is char[]


